--- a/style/css/style.css
+++ b/style/css/style.css
@@ -50,7 +50,7 @@ h1 {
   background-color: transparent;
   opacity: 0.5;
   transition: opacity 0.3s ease-in-out;
-  border: 4px solid transparent;
+  border: 4px solid #fff;
   border-radius: 50%;
   transition: all 0.3s ease-in-out;
 }
